; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_log.c_log_stacktrace.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_log.c_log_stacktrace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.logger = type { i64 }

@logger = common dso_local global %struct.logger zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @log_stacktrace() #0 {
  %1 = alloca %struct.logger*, align 8
  store %struct.logger* @logger, %struct.logger** %1, align 8
  %2 = load %struct.logger*, %struct.logger** %1, align 8
  %3 = getelementptr inbounds %struct.logger, %struct.logger* %2, i32 0, i32 0
  %4 = load i64, i64* %3, align 8
  %5 = icmp slt i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  br label %12

7:                                                ; preds = %0
  %8 = load %struct.logger*, %struct.logger** %1, align 8
  %9 = getelementptr inbounds %struct.logger, %struct.logger* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @nc_stacktrace_fd(i64 %10)
  br label %12

12:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @nc_stacktrace_fd(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
